# CI_CD_test

./: Dockerfile  README.md  docker-compose-prod.yml  pyproject.toml
.github/workflows/: deploy.yml  python-app.yml
src/: bot_init.py  main.py  start.py
