[project]
name = "ci-cd-test"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "user@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
